Problem: no check if noexcept is supported by compiler
Solution: add compile check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -415,6 +415,7 @@ if (CMAKE_SYSTEM_NAME MATCHES "SunOS" OR CMAKE_SYSTEM_NAME MATCHES "NetBSD")
   endif ()
 endif ()
 
+zmq_check_noexcept ()
 
 #-----------------------------------------------------------------------------
 if (NOT CMAKE_CROSSCOMPILING AND NOT MSVC)
