--- a/Makefile.am
+++ b/Makefile.am
@@ -143,6 +143,8 @@ src_libzmq_la_SOURCES = \
 	src/poller.hpp \
 	src/poller_base.cpp \
 	src/poller_base.hpp \
+	src/polling_util.cpp \
+	src/polling_util.hpp \
 	src/pollset.cpp \
 	src/pollset.hpp \
 	src/precompiled.cpp \
