Problem: not able to use wepoll in configure script
Solution: add wepoll as a polling system

--- a/configure.ac
+++ b/configure.ac
@@ -507,6 +507,8 @@ AM_CONDITIONAL(USE_LIBSODIUM, test "$curve_library" = "libsodium")
 AM_CONDITIONAL(USE_TWEETNACL, test "$curve_library" = "tweetnacl")
 AM_CONDITIONAL(HAVE_CURVE, test "x$curve_library" != "x")
 
+AM_CONDITIONAL(USE_WEPOLL, test "$poller" = "wepoll")
+
 # build using pgm
 have_pgm_library="no"
 
