Problem: test_connect_delay_tipc is almost always failing
Solution: add to XFAIL_TESTS until resolved

--- a/Makefile.am
+++ b/Makefile.am
@@ -990,6 +990,11 @@ XFAIL_TESTS += test_ipc_wildcard \
 		test_term_endpoint
 endif
 
+# TODO remove this again when resolving https://github.com/zeromq/libzmq/issues/3124
+if BUILD_TIPC
+XFAIL_TESTS += test_connect_delay_tipc
+endif
+
 EXTRA_DIST = \
 	external/unity/license.txt \
 	external/unity/version.txt \
