Problem: test_term_endpoint not yet using unity
Solution: migrate to unity

--- a/Makefile.am
+++ b/Makefile.am
@@ -517,7 +517,8 @@ tests_test_last_endpoint_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_last_endpoint_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_term_endpoint_SOURCES = tests/test_term_endpoint.cpp
-tests_test_term_endpoint_LDADD = src/libzmq.la
+tests_test_term_endpoint_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_term_endpoint_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_srcfd_SOURCES = tests/test_srcfd.cpp
 tests_test_srcfd_LDADD = src/libzmq.la
