--- a/.gitignore
+++ b/.gitignore
@@ -148,6 +148,7 @@ test_security_zap
 test_socket_null
 test_xpub_verbose
 test_mock_pub_sub
+test_proxy_hwm
 unittest_ip_resolver
 unittest_mtrie
 unittest_poller
