--- a/Makefile.am
+++ b/Makefile.am
@@ -159,6 +159,8 @@ src_libzmq_la_SOURCES = \
 	src/push.hpp \
 	src/radio.cpp \
 	src/radio.hpp \
+	src/radix_tree.cpp \
+	src/radix_tree.hpp \
 	src/random.cpp \
 	src/random.hpp \
 	src/raw_decoder.cpp \
@@ -948,7 +950,8 @@ test_apps += \
 	unittests/unittest_ypipe \
 	unittests/unittest_mtrie \
 	unittests/unittest_ip_resolver \
-	unittests/unittest_udp_address
+	unittests/unittest_udp_address \
+	unittests/unittest_radix_tree
 
 unittests_unittest_poller_SOURCES = unittests/unittest_poller.cpp
 unittests_unittest_poller_CPPFLAGS = -I$(top_srcdir)/src ${UNITY_CPPFLAGS} $(CODE_COVERAGE_CPPFLAGS)
@@ -986,6 +989,14 @@ unittests_unittest_udp_address_SOURCES = unittests/unittest_udp_address.cpp unit
 unittests_unittest_udp_address_CPPFLAGS = -I$(top_srcdir)/src ${UNITY_CPPFLAGS} $(CODE_COVERAGE_CPPFLAGS)
 unittests_unittest_udp_address_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS)
 unittests_unittest_udp_address_LDADD = $(top_builddir)/src/.libs/libzmq.a \
+	${src_libzmq_la_LIBADD} \
+	${UNITY_LIBS} \
+	$(CODE_COVERAGE_LDFLAGS)
+
+unittests_unittest_radix_tree_SOURCES = unittests/unittest_radix_tree.cpp
+unittests_unittest_radix_tree_CPPFLAGS = -I$(top_srcdir)/src ${UNITY_CPPFLAGS} $(CODE_COVERAGE_CPPFLAGS)
+unittests_unittest_radix_tree_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS)
+unittests_unittest_radix_tree_LDADD = $(top_builddir)/src/.libs/libzmq.a \
 	${src_libzmq_la_LIBADD} \
 	${UNITY_LIBS} \
 	$(CODE_COVERAGE_LDFLAGS)
