Change LDADD and CPPFLAGS

--- a/Makefile.am
+++ b/Makefile.am
@@ -377,7 +377,9 @@ if ENABLE_STATIC
 noinst_PROGRAMS += \
 	perf/benchmark_radix_tree
 
-perf_benchmark_radix_tree_LDADD = $(top_builddir)/src/.libs/libzmq.a
+perf_benchmark_radix_tree_CPPFLAGS = -I$(top_srcdir)/src
+perf_benchmark_radix_tree_LDADD = $(top_builddir)/src/.libs/libzmq.a \
+	${src_libzmq_la_LIBADD}
 perf_benchmark_radix_tree_SOURCES = perf/benchmark_radix_tree.cpp
 endif
 endif
