--- a/Makefile.am
+++ b/Makefile.am
@@ -379,7 +379,8 @@ noinst_PROGRAMS += \
 
 perf_benchmark_radix_tree_DEPENDENCIES = src/libzmq.la
 perf_benchmark_radix_tree_CPPFLAGS = -I$(top_srcdir)/src
-perf_benchmark_radix_tree_LDADD = $(top_builddir)/src/.libs/libzmq.a
+perf_benchmark_radix_tree_LDADD = $(top_builddir)/src/.libs/libzmq.a \
+	${src_libzmq_la_LIBADD}
 perf_benchmark_radix_tree_SOURCES = perf/benchmark_radix_tree.cpp
 endif
 endif
