Problem: new tests and perf binaries not ignored by git
Solution: add them to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@ test_reqrep_device_tipc
 test_reqrep_tipc
 test_router_handover
 test_router_mandatory_tipc
+test_router_notify
 test_shutdown_stress_tipc
 test_sub_forward_tipc
 test_term_endpoint_tipc
@@ -133,8 +134,7 @@ test_radio_dish
 test_udp
 test_scatter_gather
 test_socketopt_hwm
-test_use_fd_ipc
-test_use_fd_tcp
+test_use_fd
 test_pub_invert_matching
 test_dgram
 test_base85
@@ -144,6 +144,7 @@ test_zmq_poll_fd
 test_reconnect_ivl
 test_address_tipc
 test_app_meta
+test_security_gssapi
 test_security_zap
 test_socket_null
 test_xpub_verbose
@@ -166,12 +167,14 @@ remote_lat
 remote_thr
 inproc_lat
 inproc_thr
+benchmark_radix_tree
 !local_lat/
 !local_thr/
 !remote_lat/
 !remote_thr/
 !inproc_lat/
 !inproc_thr/
+!benchmark_radix_tree/
 doc/*.1
 doc/*.3
 doc/*.7
