Add specific option to select radix tree implementation for subscriptions (defaults to ON if draft API enabled).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,10 +114,17 @@ else()
   option(ENABLE_DRAFTS "Build and install draft classes and methods" OFF)
 endif()
 if(ENABLE_DRAFTS)
+  option (ENABLE_RADIX_TREE "Use radix tree implementation to manage subscriptions" ON)
   add_definitions(-DZMQ_BUILD_DRAFT_API)
   set(pkg_config_defines "-DZMQ_BUILD_DRAFT_API=1")
 else()
+  option (ENABLE_RADIX_TREE "Use radix tree implementation to manage subscriptions" OFF)
   set(pkg_config_defines "")
+endif()
+
+if (ENABLE_RADIX_TREE)
+   message(STATUS "Using radix tree implementation to manage subscriptions")
+   add_definitions(-DZMQ_USE_RADIX_TREE)
 endif()
 
 option(WITH_MILITANT "Enable militant assertions" OFF)
